--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>test title</title>
+  </head>
+  <body>
+    test body
+  </body>
+</html>
