--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Resto - Restaurant Bootstrap 4 Template by GetTemplates.co</title>
@@ -162,7 +161,10 @@
 
 	    </div>
 	    <div class="col-lg-6 hero-right">
-	    	<div class="owl-carousel owl-theme hero-carousel">
+        <div class="item">
+          <img class="img-fluid" src="img/IMG_1961.jpg" alt="">
+        </div>
+	    	<!-- <div class="owl-carousel owl-theme hero-carousel">
 			    <div class="item">
 			    	<img class="img-fluid" src="img/hero-1.jpg" alt="">
 			    </div>
@@ -171,7 +173,7 @@
 			    </div>
 			    <div class="item">
 			    	<img class="img-fluid" src="img/hero-3.jpg" alt="">
-			    </div>
+			    </div> -->
 			</div>
 	    </div>
 	</div>
