--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 		</p>
 		<p>info@yourdomain.com</p>
 	</div>
-</div>	<div id="side-search" class="sidenav">
+</div>
+<div id="side-search" class="sidenav">
 	<a href="javascript:void(0)" id="side-search-close">&times;</a>
 	<div class="sidenav-content">
 		<form action="">
@@ -63,7 +64,8 @@
 	</div>
 
 
-</div>	<div id="canvas-overlay"></div>
+</div>
+<div id="canvas-overlay"></div>
 	<div class="boxed-page">
 		<nav id="navbar-header" class="navbar navbar-expand-lg">
     <div class="container">
@@ -76,11 +78,11 @@
 
         <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
             <ul class="navbar-nav d-flex justify-content-between">
-                <li class="nav-item only-desktop">
+                <!-- <li class="nav-item only-desktop">
                     <a class="nav-link" id="side-nav-open" href="#">
                         <span class="lnr lnr-menu"></span>
                     </a>
-                </li>
+                </li> -->
                 <div class="d-flex flex-lg-row flex-column">
                     <li class="nav-item active">
                         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
@@ -117,11 +119,11 @@
                         <a class="nav-link" href="reservation.html">Reservation</a>
                     </li>
                 </div>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a id="side-search-open" class="nav-link" href="#">
                         <span class="lnr lnr-magnifier"></span>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
