--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		<div class="col-lg-6 hero-left">
 		    <h1 class="display-4 mb-5">Always on the road</h1>
 		    <div class="mb-2">
-		    	<a class="btn btn-primary btn-shadow btn-lg" href="#" role="button">Explore Menu</a>
+		    	<a class="btn btn-primary btn-shadow btn-lg" href="mailto:tanglincandice@gmail.com" role="button">Text Me!</a>
 			    <a class="btn btn-icon btn-lg" href="https://player.vimeo.com/video/33110953" data-featherlight="iframe" data-featherlight-iframe-allowfullscreen="true">
 			    	<span class="lnr lnr-film-play"></span>
 			    	Play Video
@@ -150,19 +150,16 @@
 
 	    </div>
 	    <div class="col-lg-6 hero-right">
+        <div class="owl-carousel owl-theme hero-carousel">
         <div class="item">
           <img class="img-fluid" src="img/IMG_1961.jpg" alt="">
         </div>
-	    	<!-- <div class="owl-carousel owl-theme hero-carousel">
-			    <div class="item">
-			    	<img class="img-fluid" src="img/hero-1.jpg" alt="">
-			    </div>
-			    <div class="item">
-			    	<img class="img-fluid" src="img/hero-2.jpg" alt="">
-			    </div>
-			    <div class="item">
-			    	<img class="img-fluid" src="img/hero-3.jpg" alt="">
-			    </div> -->
+        <div class="item">
+          <img class="img-fluid" src="img/DSCN1594.jpg" alt="">
+        </div>
+        <div class="item">
+          <img class="img-fluid" src="img/IMG_4013.jpg" alt="">
+        </div>
 			</div>
 	    </div>
 	</div>
