--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About me</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="about.html">私について</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="about.html">关于我</a>
+                    </li>
                 </div>
             </ul>
 
@@ -120,7 +126,8 @@
 		<div class="col-lg-6 hero-left">
 		    <h1 class="display-4 mb-5">Always on the road</h1>
 		    <div class="mb-2">
-		    	<a class="btn btn-primary btn-shadow btn-lg" href="mailto:tanglincandice@gmail.com" role="button">Text Me!</a>
+		    	<a class="btn btn-primary btn-shadow btn-lg" href="mailto:tanglincandice@gmail.com" role="button">Text Me!
+          </a>
 			    <a class="btn btn-icon btn-lg" href="https://player.vimeo.com/video/33110953" data-featherlight="iframe" data-featherlight-iframe-allowfullscreen="true">
 			    	<span class="lnr lnr-film-play"></span>
 			    	Play Video
