--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/alex.css">
 
     <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
@@ -136,21 +137,26 @@
 
 		    <ul class="hero-info list-unstyled d-flex text-center mb-0">
 		    	<li class="border-right">
-		    		<span class="lnr lnr-rocket"></span>
+		    		<!-- <span class="lnr lnr-rocket"></span> -->
+            <span class="fourfivesix">4</span>
 		    		<h5>
-		    			Fast Delivery
+		    			<!-- Fast Delivery -->
+              countries
 		    		</h5>
 		    	</li>
 		    	<li class="border-right">
-		    		<span class="lnr lnr-leaf"></span>
+		    		<!-- <span class="lnr lnr-leaf"></span> -->
+            <span class="fourfivesix">5</span>
 		    		<h5>
-		    			Fresh Food
+		    			languages
 		    		</h5>
 		    	</li>
 		    	<li class="">
-		    		<span class="lnr lnr-bubble"></span>
+		    		<!-- <span class="lnr lnr-bubble"></span> -->
+            <span class="fourfivesix">6</span>
 		    		<h5>
-		    			24/7 Support
+		    			<!-- 24/7 Support -->
+              years
 		    		</h5>
 		    	</li>
 		    </ul>
