--- a/index.html
+++ b/index.html
@@ -136,29 +136,30 @@
 		    </div>
 
 		    <ul class="hero-info list-unstyled d-flex text-center mb-0">
+          <a href="#" data-featherlight="#myCountriesLightbox">
 		    	<li class="border-right">
-		    		<!-- <span class="lnr lnr-rocket"></span> -->
             <span class="fourfivesix">4</span>
 		    		<h5>
-		    			<!-- Fast Delivery -->
               countries
 		    		</h5>
 		    	</li>
+        </a>
+          <a href="#" data-featherlight="#myLanguagesLightbox">
 		    	<li class="border-right">
-		    		<!-- <span class="lnr lnr-leaf"></span> -->
             <span class="fourfivesix">5</span>
 		    		<h5>
 		    			languages
 		    		</h5>
 		    	</li>
+          </a>
+          <a href="#" data-featherlight="#myYearsLightbox">
 		    	<li class="">
-		    		<!-- <span class="lnr lnr-bubble"></span> -->
             <span class="fourfivesix">6</span>
 		    		<h5>
-		    			<!-- 24/7 Support -->
               years
 		    		</h5>
 		    	</li>
+        </a>
 		    </ul>
 
 	    </div>
@@ -178,6 +179,27 @@
 	</div>
   </div>
 </div>
+</div>
+<div id="myLanguagesLightbox">
+  <ul>
+    <li>English (TOEIC: 680pt)</li>
+    <li>Mandarin Chinese (native)</li>
+    <li>Cantonese</li>
+    <li>Japanese (JLPT N1)</li>
+    <li>Korean</li>
+  </ul>
+</div>
+<div id="myCountriesLightbox">
+  I have been to:
+  <ul>
+    <li>Thailand</li>
+    <li>Korea</li>
+    <li>Japan</li>
+    <li>China</li>
+  </ul>
+</div>
+<div id="myYearsLightbox">
+  I have lived in Japan for 6 years
 </div>
 	<!-- External JS -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
