move candice cv

--- a/CV.xhtml
+++ b/CV.xhtml
@@ -735,7 +735,7 @@
   <td style="text-align:left;width:6.9493in; " class="Table5_A2">
     <p class="P48">
       <span style="font-family:Century; font-size:10.5pt;">
-        JavaScript, React JS
+        JavaScript/TypeScript, React JS, Express.js, Node.js
       </span>
     </p>
   </td>
